test/ui/tests/name-resolution/duplicate-bindings.stderr
error[E020]: `Alpha` is defined multiple times in this scope
 --> ${DIRECTORY}/name-resolution/duplicate-bindings.lushui:5:6
  |
5 | data Alpha: Type of
  |      ^^^^^ conflicting definition
  |
 --> ${DIRECTORY}/name-resolution/duplicate-bindings.lushui:8:1
  |
8 | Alpha: Type = Type
  | ^^^^^ conflicting definition
  |

error[E020]: `beta` is defined multiple times in this scope
  --> ${DIRECTORY}/name-resolution/duplicate-bindings.lushui:10:1
   |
10 | beta: Nat = 1000
   | ^^^^ conflicting definition
   |
  --> ${DIRECTORY}/name-resolution/duplicate-bindings.lushui:19:1
   |
19 | beta (x y: Nat): Nat = y
   | ^^^^ conflicting definition
   |

error[E020]: `capsule` is defined multiple times in this scope
  --> ${DIRECTORY}/name-resolution/duplicate-bindings.lushui:12:8
   |
12 | module capsule of
   |        ^^^^^^^ conflicting definition
   |
  --> ${DIRECTORY}/name-resolution/duplicate-bindings.lushui:21:1
   |
21 | capsule: Nat = beta
   | ^^^^^^^ conflicting definition
   |

error[E020]: `Nat` is defined multiple times in this scope
  --> ${DIRECTORY}/name-resolution/duplicate-bindings.lushui:13:15
   |
13 |     use super.Nat
   |               ^^^ conflicting definition
   |
  --> ${DIRECTORY}/name-resolution/duplicate-bindings.lushui:15:10
   |
15 |     data Nat: Type of
   |          ^^^ conflicting definition
   |

error[E020]: `zero` is defined multiple times in this scope
  --> ${DIRECTORY}/name-resolution/duplicate-bindings.lushui:26:1
   |
26 | zero: Nat = 0
   | ^^^^ conflicting definition
   |
  --> ${DIRECTORY}/name-resolution/duplicate-bindings.lushui:28:13
   |
28 | use capsule.zero
   |             ^^^^ conflicting definition
   |

error: aborting due to 5 previous errors
 note: the error E020 has a detailed explanation
 help: run `lushui explain E020` to view it

